k3s/policies/templates/no-run-as-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: norunasroot
spec:
  crd:
    spec:
      names:
        kind: NoRunAsRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package admission
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Containers must run as non-root: %v", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsNonRoot == false
          msg := sprintf("Containers must not set runAsNonRoot to false: %v", [container.name])
        }
